--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=sistemameg2
 server.port=8081
 spring.devtools.restart.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/loja
+spring.datasource.username=postgres
+spring.datasource.password=1990
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
