--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
